--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=aba9d3d193788c7c773f",
+    "/css/app.css": "/css/app.css?id=daf7798f88183779e8b6"
 }
