--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fortawesome/font-awesome": "^5.8",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "mews/captcha": "~2.0",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
