--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "fideloper/proxy": "^4.0",
         "fortawesome/font-awesome": "^5.8",
+        "guzzlehttp/guzzle": "~6.3",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
